# saya

./: .gitignore  Cargo.toml  Dockerfile  DockerfileLSIO  LICENSE  README.md  docker-compose.yml  generate_config.py  init.sh  update_serverfiles.sh
example_data/config/: palworld_conf.toml
src/: config.rs  main.rs  proxy.rs  server.rs
