[package]
name = "saya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.29.0", features = ["process", "signal"] }
toml = "0.8.19"
serde = { version = "1.0", features = ["derive"] }
